# hyrak_control-

./: .env.example  .gitignore  commands.txt  start.sh
.claude/: launch.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2277079acb06_permits_flight_zone_flags.py  67ececf28608_zones_flights_flight_samples.py  9b063f0fc7ba_create_drones_table.py
backend/app/: config.py  main.py  server.py
backend/app/api/: routes.py
backend/app/db/: __init__.py  engine.py  models.py
backend/app/events/: admin_events.py  permit_events.py  swarm_events.py  telemetry_events.py
backend/app/flights/: recorder.py
backend/app/permits/: service.py
backend/app/registry/: drones.py
backend/app/sessions/: manager.py  models.py  observer.py
backend/app/telemetry/: manager.py  schemas.py  serial_bridge.py
backend/app/utils/: geoip.py  logging.py
backend/app/vision/: base.py  bytetrack_long.yaml  controllers.py  drawing.py  tracker_config.py  worker_pool.py
backend/app/vision/modules/: __registry__.py  depth_mapper.py  enhancer.py  human_tracker.py  object_detector.py  person_tracker.py
backend/app/webrtc/: __init__.py  peer_registry.py  signaling.py  stream_track.py  turn.py
backend/app/zones/: engine.py  fence.py  monitor.py
backend/scripts/: seed_hyderabad_zones.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/scripts/: copy-cesium.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: WebRTCContext.tsx
frontend/src/hooks/: useCamera.ts  useDrone.ts  useFlightTimer.ts  useRecorder.ts  useWebRTC.ts
frontend/src/lib/: browserSerial.ts  deconflict.ts  fleet.ts  osd.ts  px4-params-meta.ts  server-url.ts  socket.ts  survey.ts  theme.tsx  uploadPath.ts  (+2 more)
simulation/: swarm.sh  swarm20.sh  swarm3.sh  swarm30.sh  swarm5.sh
(+50 files in other folders)
