[project]
name = "verocore-backend"
version = "0.1.0"
description = "Verocore Platform — Cloud-native drone intelligence backend"
requires-python = "==3.11.*"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-socketio>=5.11.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "aiortc>=1.9.0",
    "av>=12.3.0,<13.0.0",
    "mavsdk>=2.2.0",
    "pyserial>=3.5",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "ultralytics>=8.3.2",
    "transformers>=4.45.2",
    "accelerate>=0.34.0",
    "Pillow>=10.4.0",
    "opencv-contrib-python-headless>=4.10.0.84",
    "numpy>=1.26.4,<2.0.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.2",
    "timm>=1.0.25",
    "aiohttp>=3.13.3",
    "python-multipart>=0.0.32",
    "lapx>=0.9.4",
    "insightface>=1.0.1",
    "onnxruntime-gpu>=1.26.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "shapely>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# insightface depends on the CPU-only "onnxruntime" package, but we need
# "onnxruntime-gpu" for CUDA inference. Both packages install into the same
# `onnxruntime` import namespace and clobber each other if both are present.
# This override drops the CPU package from the resolution entirely so only
# onnxruntime-gpu (which provides the same `onnxruntime` module) is installed.
override-dependencies = ["onnxruntime; python_version < '0'"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
